--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Smart Family Care</string>
+    <string name="already_have_account">Already have account?</string>
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
 </resources>
