--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
     <string name="already_have_account">Already have account?</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+
+    <string-array name ="Blood_Group">
+
+        <item>O+(ve)</item>
+        <item>A+(ve)</item>
+        <item>AB+(ve)</item>
+        <item>A+(ve)</item>
+        <item>O-(ve)</item>
+        <item>A-(ve)</item>
+        <item>B+(ve)</item>
+        <item>B-(ve)</item>
+        <item>AB-(ve)</item>
+    </string-array>
 </resources>
